debounceTime adds a "lag" on requests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>
-  {{ title }}!
-</h1>
+<h1>{{ title }}!</h1>
 
-<button>Click Me (Not needed..?)</button>
+<input
+  type="text"
+  [(ngModel)]="searchString"
+  (ngModelChange)="inputChanged($event)"
+  placeholder="Search...">
