--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,12 @@
   </button>
 </header>
 
-<div *ngFor="let result of results$ | async">
-    <div *ngIf="result.data.thumbnail != 'default' && result.data.thumbnail != 'self'">
-      <a target="_blank" [href]="result.data.url">
-        <img [src]="result.data.thumbnail" alt="">
-      </a>
-    </div>
+<div>
+  <div *ngFor="let result of results$ | async">
+      <div *ngIf="result.data.thumbnail != 'default' && result.data.thumbnail != 'self'">
+        <a target="_blank" [href]="result.data.url">
+          <img [src]="result.data.thumbnail" alt="">
+        </a>
+      </div>
+  </div>
 </div>
