--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,33 @@
-header {
-  margin: 10px;
+h1 {
+  margin: 1rem;
 }
-
-.result {
-  margin: 10px;
+a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #333;
 }
-
-img {
-  height: 150px;
-  width: 150px;
+.inputstyle {
+  margin: auto;
+}
+.example-card {
+  max-width: 500px;
+  max-height: 174px;
+  margin: 1rem auto;
+}
+.imgReddit {
+  float: left;
+  width: 145px !important;
+  display: block;
+}
+.textReddit {
+  float: left;
+  display: block;
+}
+.example-header-image {
+  background-size: cover;
+}
+.text-inside-grid {
+  position: absolute;
+  top: 0px;
+  left: 5px;
 }
